--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,186 @@
+absl-py==1.0.0
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
 asgiref==3.4.1
+astunparse==1.6.3
+attrs==21.2.0
+backcall==0.2.0
+backports.entry-points-selectable==1.1.1
+backports.functools-lru-cache==1.6.4
 backports.zoneinfo==0.2.1
+bcrypt==3.1.7
+bleach==4.1.0
+blinker==1.4
 cachetools==5.0.0
-certifi==2021.10.8
-charset-normalizer==2.0.9
-cssselect==1.1.0
-cssutils==2.3.0
+certifi==2019.11.28
+cffi==1.15.0
+chardet==3.0.4
+Click==7.0
+colorama==0.4.1
+cryptography==2.8
+cupshelpers==1.0
+cycler==0.11.0
+dbus-python==1.2.8
+debugpy==1.5.1
+decorator==5.1.0
+defer==1.0.6
+defusedxml==0.7.1
+distlib==0.3.4
+distro==1.4.0
+distro-info===0.23ubuntu1
 dj-database-url==0.5.0
-Django==4.0
-django-crispy-forms==1.13.0
+Django==4.0.3
+django-allauth==0.50.0
+django-crispy-forms==1.14.0
 django-heroku==0.3.1
-django-on-heroku==1.1.2
+dnspython==1.16.0
+entrypoints==0.3
+evdev==1.4.0
+filelock==3.4.0
+flatbuffers==2.0
+fonttools==4.29.1
+gast==0.5.3
+google-auth==2.6.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.43.0
 gunicorn==20.1.0
-idna==3.3
-lxml==4.7.1
-Pillow==8.4.0
-premailer==3.10.0
-psycopg==3.0.7
+h5py==3.6.0
+httplib2==0.14.0
+idna==2.8
+importlib-metadata==4.10.1
+importlib-resources==5.4.0
+ipykernel==6.6.0
+ipython==7.30.1
+ipython-genutils==0.2.0
+ipywidgets==7.6.5
+jedi==0.18.1
+Jinja2==3.0.3
+joblib==1.1.0
+jsonschema==4.3.2
+jupyter==1.0.0
+jupyter-client==7.1.0
+jupyter-console==6.4.0
+jupyter-core==4.9.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.2
+keras==2.8.0
+Keras-Preprocessing==1.1.2
+keyring==18.0.1
+kiwisolver==1.3.2
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+libclang==13.0.0
+louis==3.12.0
+macaroonbakery==1.3.1
+Magnus==1.0.3
+Mako==1.1.0
+Markdown==3.3.6
+MarkupSafe==2.0.1
+matplotlib==3.5.1
+matplotlib-inline==0.1.3
+mediapipe==0.8.9.1
+menulibre==2.2.1
+mistune==0.8.4
+mpris2==1.0.2
+nbclient==0.5.9
+nbconvert==6.3.0
+nbformat==5.1.3
+nest-asyncio==1.5.4
+netifaces==0.10.4
+notify2==0.3
+numpy==1.22.2
+oauthlib==3.1.0
+olefile==0.46
+onboard==1.4.1
+opencv-contrib-python==4.5.5.62
+opencv-python==4.4.0.46
+opt-einsum==3.3.0
+packaging==21.3
+pandocfilters==1.5.0
+parso==0.8.3
+pexpect==4.6.0
+pickleshare==0.7.5
+Pillow==7.0.0
+platformdirs==2.4.0
+prometheus-client==0.12.0
+prompt-toolkit==3.0.24
+protobuf==3.19.4
+proton-client==0.7.1
+protonvpn-cli==3.11.1
+protonvpn-gui==1.7.0
+protonvpn-nm-lib==3.8.0
+psutil==5.5.1
 psycopg2==2.9.2
-psycopg2-binary==2.9.2
-PyPDF2==1.26.0
-reportlab==3.6.5
-requests==2.26.0
+ptyprocess==0.7.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycairo==1.16.2
+pycparser==2.21
+pycups==1.9.73
+Pygments==2.10.0
+PyGObject==3.36.0
+PyJWT==1.7.1
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+pynput==1.7.6
+pyOpenSSL==19.0.0
+pyparsing==3.0.6
+pyRFC3339==1.1
+pyrsistent==0.18.0
+python-apt==2.0.0+ubuntu0.20.4.7
+python-dateutil==2.7.3
+python-debian===0.1.36ubuntu1
+python-gnupg==0.4.5
+python-xapp==1.8.1
+python-xlib==0.31
+python3-openid==3.2.0
+pythondialog==3.4.0
+pytz==2019.3
+pyudev==0.21.0
+pyxattr==0.6.1
+pyxdg==0.26
+PyYAML==5.3.1
+pyzmq==22.3.0
+qtconsole==5.2.2
+QtPy==2.0.0
+reportlab==3.5.34
+requests==2.22.0
+requests-oauthlib==1.3.1
+requests-unixsocket==0.2.0
+rsa==4.8
+scikit-learn==1.0.2
+scipy==1.8.0
+SecretStorage==2.3.1
+Send2Trash==1.8.0
+setproctitle==1.1.10
+simplejson==3.16.0
+six==1.14.0
 sqlparse==0.4.2
-typing-extensions==4.0.1
-urllib3==1.26.7
+systemd-python==234
+tensorboard==2.8.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+termcolor==1.1.0
+terminado==0.12.1
+testpath==0.5.0
+tf-estimator-nightly==2.8.0.dev2021122109
+threadpoolctl==3.1.0
+tornado==6.1
+traitlets==5.1.1
+typing_extensions==4.0.1
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==1.25.8
+virtualenv==20.10.0
+wadllib==1.3.3
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==2.0.3
 whitenoise==5.3.0
-yagmail==0.15.277
+widgetsnbextension==3.5.2
+wrapt==1.13.3
+youtube-dl==2020.3.24
+zipp==3.6.0
